[package]
authors = ["sundy-li <sundyli@apache.org>>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/formwork"
repository = "https://github.com/sundy-li/formwork"
edition = "2021"
license = "Apache-2.0"
name = "formwork"
version = "0.0.1"

[dependencies]
